--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -1764,7 +1764,7 @@ function change_image_url( $link_url, $accordion_id, $panel_index ) {
   <h2 id="changelog">13. Changelog</h2>
   <p><strong>v. 1.0.6</strong> (10 May 14)</p>
   <ul>
-    <li>changed 'accordion_panel' shortcode to 'accordion_slider_panel', and 'accordion_panel_element' to 'accordion_slider_panel_element', to prevent conflicts with identical shortcode names</li>
+    <li>changed 'accordion_panel' shortcode to 'accordion_slider_panel' and 'accordion_panel_element' to 'accordion_slider_panel_element', to prevent conflicts with identical shortcode names</li>
     <li>improved admin preview handling for percentage sizes</li>
     <li>improved Layers editor handling for percentage sizes</li>
     <li>added compatibility with latest Flickr changes</li>
