update change log

--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -1762,6 +1762,10 @@ function change_image_url( $link_url, $accordion_id, $panel_index ) {
   </p>
 
   <h2 id="changelog">13. Changelog</h2>
+  <p><strong>v. 1.0.7</strong> (17 May 14)</p>
+  <ul>
+    <li>several minor fixes and improvements</li>
+  </ul>
   <p><strong>v. 1.0.6</strong> (10 May 14)</p>
   <ul>
     <li>changed 'accordion_panel' shortcode to 'accordion_slider_panel' and 'accordion_panel_element' to 'accordion_slider_panel_element', to prevent conflicts with identical shortcode names</li>
