--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -1762,6 +1762,11 @@ function change_image_url( $link_url, $accordion_id, $panel_index ) {
   </p>
 
   <h2 id="changelog">13. Changelog</h2>
+  <p><strong>v. 1.0.8</strong> (20 June 14)</p>
+  <ul>
+    <li>prevent max-width and max-height for background images</li>
+    <li>added 'Keyboard Target' setting</li>
+  </ul>
   <p><strong>v. 1.0.7</strong> (17 May 14)</p>
   <ul>
     <li>several minor fixes and improvements</li>
