--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -1762,15 +1762,24 @@ function change_image_url( $link_url, $accordion_id, $panel_index ) {
   </p>
 
   <h2 id="changelog">13. Changelog</h2>
+  <p><strong>v. 1.1</strong> (4 November 14)</p>
+  <ul>
+    <li>add shuffle option</li>
+    <li>add option to hide image title tag</li>
+    <li>various fixes and improvements</li>
+  </ul>
+
   <p><strong>v. 1.0.8</strong> (20 June 14)</p>
   <ul>
     <li>prevent max-width and max-height for background images</li>
     <li>added 'Keyboard Target' setting</li>
   </ul>
+
   <p><strong>v. 1.0.7</strong> (17 May 14)</p>
   <ul>
     <li>several minor fixes and improvements</li>
   </ul>
+
   <p><strong>v. 1.0.6</strong> (10 May 14)</p>
   <ul>
     <li>changed 'accordion_panel' shortcode to 'accordion_slider_panel' and 'accordion_panel_element' to 'accordion_slider_panel_element', to prevent conflicts with identical shortcode names</li>
@@ -1779,6 +1788,7 @@ function change_image_url( $link_url, $accordion_id, $panel_index ) {
     <li>added compatibility with latest Flickr changes</li>
     <li>other minor fixes and improvements</li>
   </ul>
+
   <p><strong>v. 1.0.5</strong> (30 April 14)</p>
   <ul>
     <li>corrected default value for 'Start Panel' to -1</li>
@@ -1787,6 +1797,7 @@ function change_image_url( $link_url, $accordion_id, $panel_index ) {
     <li>fixed the 'as-opened' class removal from the last opened panel</li>
     <li>added 0 margin and padding to background images to prevent unwanted styling</li>
   </ul>
+
   <p><strong>v. 1.0.4</strong> (17 April 14)</p>
   <ul>
     <li>add inner shortcode support</li>
@@ -1795,18 +1806,22 @@ function change_image_url( $link_url, $accordion_id, $panel_index ) {
     <li>fix shortcode parsing when width and height are not specified</li>
     <li>fix shortcode parsing when layer settings are not specified</li>
   </ul>
+
   <p><strong>v. 1.0.3</strong> (10 April 14)</p>
   <ul>
     <li>add compatibility with older jQuery versions</li>
   </ul>
+
   <p><strong>v. 1.0.2</strong> (8 April 14)</p>
   <ul>
     <li>fix: show missing stylesheets warning even if accordion is cached</li>
   </ul>
+
   <p><strong>v. 1.0.1</strong> (5 April 14)</p>
   <ul>
     <li>fix: disable lightbox when the accordion is swiped</li>
   </ul>
+  
   <p><strong>v. 1.0.0</strong> (3 April 14)</p>
   <ul>
     <li>initial release</li>
