--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -12,7 +12,7 @@
 <body>
   <h1>
     Accordion Slider - by
-    <a href="http://bqworks.com/">bqworks</a>
+    <a href="http://bqworks.net/">bqworks</a>
   </h1>
   <p> <em><strong>Version 1.7</strong></em> 
   </p>
@@ -919,7 +919,7 @@ $( '.my-accordion' ).on( 'panelOpen', function( event ) {
     [accordion_slider_panel]
         [accordion_slider_panel_element name="background_source"]path/to/image.jpg[/accordion_slider_panel_element]
         [accordion_slider_panel_element name="opened_background_source"]path/to/opened_image.jpg[/accordion_slider_panel_element]
-        [accordion_slider_panel_element name="background_link"]http://bqworks.com/accordion-slider/[/accordion_slider_panel_element]
+        [accordion_slider_panel_element name="background_link"]http://bqworks.net/accordion-slider/[/accordion_slider_panel_element]
         [accordion_slider_panel_element name="layer" horizontal="center" show_transition="right"]some layer content[/accordion_slider_panel_element]
     [/accordion_slider_panel]
 [/accordion_slider]
