--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -25,28 +25,25 @@
   </p>
   <ul class="video-tutorials-list">
     <li>
-      <a href="https://www.youtube.com/watch?v=epe7kU_CQaM&list=PLh-6IaZNuPo58lYbFPNV_nOzKYoOwHBKG" target="_blank">1. Installing the plugin</a>
+      <a href="http://bqworks.net/accordion-slider/screencasts/#simple-accordion" target="_blank">1. Create and publish accordions</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=qmjgtmeLrzs&list=PLh-6IaZNuPo58lYbFPNV_nOzKYoOwHBKG" target="_blank">2. Create and publish accordions</a>
+      <a href="http://bqworks.net/accordion-slider/screencasts/#accordion-from-posts" target="_blank">2. Create accordions from posts</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=sGToyxSDZLk&list=PLh-6IaZNuPo58lYbFPNV_nOzKYoOwHBKG" target="_blank">3. Create accordions from posts</a>
+      <a href="http://bqworks.net/accordion-slider/screencasts/#accordion-from-gallery" target="_blank">3. Create accordions from galleries</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=oF3tRiuJq_k&list=PLh-6IaZNuPo58lYbFPNV_nOzKYoOwHBKG" target="_blank">4. Create accordions from galleries</a>
+      <a href="http://bqworks.net/accordion-slider/screencasts/#adding-layers" target="_blank">4. Working with layers</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=-6X1FAbJyYw&list=PLh-6IaZNuPo58lYbFPNV_nOzKYoOwHBKG" target="_blank">5. Working with layers</a>
+      <a href="http://bqworks.net/accordion-slider/screencasts/#custom-css" target="_blank">5. Adding custom CSS</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=kqU0FxrN6L4&list=PLh-6IaZNuPo58lYbFPNV_nOzKYoOwHBKG" target="_blank">6. Adding custom CSS</a>
+      <a href="http://bqworks.net/accordion-slider/screencasts/#working-with-breakpoints" target="_blank">6. Working with breakpoints</a>
     </li>
     <li>
-      <a href="https://www.youtube.com/watch?v=AatLP0QGYv8&list=PLh-6IaZNuPo58lYbFPNV_nOzKYoOwHBKG" target="_blank">7. Working with breakpoints</a>
-    </li>
-    <li>
-      <a href="https://www.youtube.com/watch?v=UVk_2r3f1xc&list=PLh-6IaZNuPo58lYbFPNV_nOzKYoOwHBKG" target="_blank">8. Import and Export accordions</a>
+      <a href="http://bqworks.net/accordion-slider/screencasts/#import-export" target="_blank">7. Import and Export accordions</a>
     </li>
   </ul>
   <h2 id="creating-and-publishing-accordions">1. Creating and publishing accordions</h2>
