--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -9,7 +9,7 @@
 <body>
   <h1>
     Accordion Slider - by
-    <a href="http://bqworks.net/">bqworks</a>
+    <a href="https://bqworks.net/">bqworks</a>
   </h1>
   <p> <em><strong>Version 1.8.4</strong></em> 
   </p>
@@ -22,22 +22,22 @@
   </p>
   <ul class="video-tutorials-list">
     <li>
-      <a href="http://bqworks.net/accordion-slider/screencasts/#simple-accordion" target="_blank">1. Create and publish accordions</a>
+      <a href="https://bqworks.net/accordion-slider/screencasts/#simple-accordion" target="_blank">1. Create and publish accordions</a>
     </li>
     <li>
-      <a href="http://bqworks.net/accordion-slider/screencasts/#accordion-from-posts" target="_blank">2. Create accordions from posts</a>
+      <a href="https://bqworks.net/accordion-slider/screencasts/#accordion-from-posts" target="_blank">2. Create accordions from posts</a>
     </li>
     <li>
-      <a href="http://bqworks.net/accordion-slider/screencasts/#accordion-from-gallery" target="_blank">3. Create accordions from galleries</a>
+      <a href="https://bqworks.net/accordion-slider/screencasts/#accordion-from-gallery" target="_blank">3. Create accordions from galleries</a>
     </li>
     <li>
-      <a href="http://bqworks.net/accordion-slider/screencasts/#adding-layers" target="_blank">4. Working with layers</a>
+      <a href="https://bqworks.net/accordion-slider/screencasts/#adding-layers" target="_blank">4. Working with layers</a>
     </li>
     <li>
-      <a href="http://bqworks.net/accordion-slider/screencasts/#working-with-breakpoints" target="_blank">5. Working with breakpoints</a>
+      <a href="https://bqworks.net/accordion-slider/screencasts/#working-with-breakpoints" target="_blank">5. Working with breakpoints</a>
     </li>
     <li>
-      <a href="http://bqworks.net/accordion-slider/screencasts/#import-export" target="_blank">6. Import and Export accordions</a>
+      <a href="https://bqworks.net/accordion-slider/screencasts/#import-export" target="_blank">6. Import and Export accordions</a>
     </li>
   </ul>
   <h2 id="creating-and-publishing-accordions">1. Creating and publishing accordions</h2>
@@ -875,7 +875,7 @@ $( '.my-accordion' ).on( 'panelOpen', function( event ) {
     [accordion_slider_panel]
         [accordion_slider_panel_element name="background_source"]path/to/image.jpg[/accordion_slider_panel_element]
         [accordion_slider_panel_element name="opened_background_source"]path/to/opened_image.jpg[/accordion_slider_panel_element]
-        [accordion_slider_panel_element name="background_link"]http://bqworks.net/accordion-slider/[/accordion_slider_panel_element]
+        [accordion_slider_panel_element name="background_link"]https://bqworks.net/accordion-slider/[/accordion_slider_panel_element]
         [accordion_slider_panel_element name="layer" horizontal="center" show_transition="right"]some layer content[/accordion_slider_panel_element]
     [/accordion_slider_panel]
 [/accordion_slider]
