--- a/documentation/documentation.html
+++ b/documentation/documentation.html
@@ -394,7 +394,7 @@
     The accordion can be published in posts and pages, in widgets, and also in PHP code.
   </p>
   <p>
-    In posts and pages you need to use the shortcode provided in the
+    In posts and pages you can use the Gutenberg block, which will allow you to select which accordion instance to insert from a list of created sliders. Alternatively, you can use the shortcode provided in the
     <i>Accordion Slider -> All Accordions</i>
     page, like this:
     <pre>[accordion_slider id="3"]</pre>
